# mcp-examples

./: .gitignore  README.md
agent/: README.md  client.py  pyproject.toml
agent/app/: pyproject.toml
agent/app/.langgraph_api/: .langgraph_ops.pckl
agent/app/react_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent/app/src/react_agent/: context.py  graph.py  tools.py  utils.py
server/: README.md  client.py  pyproject.toml  server.py
server/scripts/: create_idpt.py
